[package]
name = "wasm-futures-executor"
version = "0.1.0"
edition = "2018"
authors = ["Oliver Wangler <oliver@wngr.de>"]
description = "Executor for asynchronous task based on wasm web workers"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/wngr/wasm-futures-executor"
homepage = "https://github.com/wngr/wasm-futures-executor"
documentation = "https://docs.rs/wasm-futures-executor"
keywords = ["thread", "wasm", "parallel", "concurrency", "async"]
categories = ["concurrency", "wasm"]
readme = "README.md"
exclude = ["sample", "sample-webpack", ".github"]

[dependencies]
async-lock = "2.4.0"
futures = "0.3.16"
js-sys = "0.3.53"
log = "0.4.14"
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.26"

[dependencies.parking_lot]
version = "0.11.1"
# nightly: use a thread parker with atomics support
features = ["wasm-bindgen", "nightly"]

[dependencies.web-sys]
version = "0.3.53"
features = ["DedicatedWorkerGlobalScope","Navigator", "WorkerOptions", "WorkerType", "ErrorEvent", "Url"]

[patch.crates-io]
js-sys = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "6ab9ac0f0f6853e1ceed8006a0ffe3a4c0c8323f" }
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "6ab9ac0f0f6853e1ceed8006a0ffe3a4c0c8323f" }
web-sys = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "6ab9ac0f0f6853e1ceed8006a0ffe3a4c0c8323f" }

[package.metadata.docs.rs]
features = ["nightly"]
